syntax = "proto3";
package grpc_todo;
option go_package = ".tasks";

import "google/protobuf/empty.proto";

service TodoService {
    rpc CreateTask(Task) returns (Task) {}
    rpc ReadTask(TaskRequest) returns (Task) {}
    rpc UpdateTask(Task) returns (Task) {}
    rpc DeleteTask(TaskRequest) returns (google.protobuf.Empty) {}
    rpc CompleteTask(TaskComplete) returns (Task) {}
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message TaskRequest {
    string id = 1;
}

message TaskComplete {
    string id = 1;
    bool completed = 2;
}
